# MergeSortDataFile

./: CMakeLists.txt  MOCK_DATA.txt  main.cpp  mock_data_short.txt  sample_data.txt
data/: 1000_lines.txt  20_lines.txt  bad_data.txt
inc/: entity.h  entity_file_processor.h  merge_sort.h  sort.h  timer.h  utils.h
output/: by_age.txt  by_department.txt  by_hourly_rate.txt
src/: entity.cpp  entity_file_processor.cpp  merge_sort.cpp  sort.cpp  utils.cpp
